--- a/index.html
+++ b/index.html
@@ -35,54 +35,53 @@
     const playsMap = { 1.39: 1, 3.39: 3, 5.39: 5, 10.39: 10 };
     const plays = playsMap[amount] || 1;
 
-    if (!sessionId) {
-      document.getElementById("qrContainer").innerHTML = '';
-      document.getElementById('code').textContent = '';
-      document.getElementById('downloadBtn').style.display = 'none';
+    let randomIdPromise;
+    if (sessionId) {
+      randomIdPromise = generateHMAC(sessionId).then(h => h.substring(0, 4).toUpperCase());
     } else {
-      generateHMAC(sessionId).then(sessionHash => {
-        const randomId = sessionHash.substring(0, 4).toUpperCase();
-
-        const dataToSign = `${plays}|${machineId}${randomId}`;
-
-        generateHMAC(dataToSign).then(hash => {
-          const shortSig = hash.substring(0, 4).toUpperCase();
-          const code = plays === 10 ? `10-${machineId}${randomId}${shortSig}` : `${plays}-${machineId}${randomId}${shortSig}`;
-
-          document.getElementById('code').textContent = code;
-          document.getElementById("qrContainer").innerHTML = "";
-          new QRCode(document.getElementById("qrContainer"), {
-            text: code,
-            width: 200,
-            height: 200,
-            colorDark: "#000000",
-            colorLight: "#FFFFFF",
-            correctLevel: QRCode.CorrectLevel.H
-          });
-
-          document.getElementById('downloadBtn').onclick = () => {
-            const canvas = document.createElement('canvas');
-            canvas.width = 440;
-            canvas.height = 520;
-            const ctx = canvas.getContext('2d');
-            ctx.fillStyle = 'white';
-            ctx.fillRect(0, 0, canvas.width, canvas.height);
-            const qrCanvas = document.querySelector('#qrContainer canvas');
-            ctx.drawImage(qrCanvas, 40, 40, 360, 360);
-            ctx.fillStyle = 'black';
-            ctx.font = 'bold 30px Arial';
-            ctx.textAlign = 'center';
-            ctx.fillText(code, canvas.width / 2, 460);
-            const url = canvas.toDataURL('image/png');
-            const randomSuffix = Math.random().toString(36).substring(2, 6).toUpperCase();
-            const a = document.createElement('a');
-            a.href = url;
-            a.download = `Trac-QR-${machineId}-${plays}plays-${randomSuffix}.png`;
-            a.click();
-          };
-        });
-      });
+      randomIdPromise = Promise.resolve(Math.random().toString(36).substring(2, 6).toUpperCase());
     }
+
+    randomIdPromise.then(randomId => {
+      const dataToSign = `${plays}|${machineId}${randomId}`;
+
+      generateHMAC(dataToSign).then(hash => {
+        const shortSig = hash.substring(0, 4).toUpperCase();
+        const code = plays === 10 ? `10-${machineId}${randomId}${shortSig}` : `${plays}-${machineId}${randomId}${shortSig}`;
+
+        document.getElementById('code').textContent = code;
+        document.getElementById("qrContainer").innerHTML = "";
+        new QRCode(document.getElementById("qrContainer"), {
+          text: code,
+          width: 200,
+          height: 200,
+          colorDark: "#000000",
+          colorLight: "#FFFFFF",
+          correctLevel: QRCode.CorrectLevel.H
+        });
+
+        document.getElementById('downloadBtn').onclick = () => {
+          const canvas = document.createElement('canvas');
+          canvas.width = 440;
+          canvas.height = 520;
+          const ctx = canvas.getContext('2d');
+          ctx.fillStyle = 'white';
+          ctx.fillRect(0, 0, canvas.width, canvas.height);
+          const qrCanvas = document.querySelector('#qrContainer canvas');
+          ctx.drawImage(qrCanvas, 40, 40, 360, 360);
+          ctx.fillStyle = 'black';
+          ctx.font = 'bold 30px Arial';
+          ctx.textAlign = 'center';
+          ctx.fillText(code, canvas.width / 2, 460);
+          const url = canvas.toDataURL('image/png');
+          const randomSuffix = Math.random().toString(36).substring(2, 6).toUpperCase();
+          const a = document.createElement('a');
+          a.href = url;
+          a.download = `Trac-QR-${machineId}-${plays}plays-${randomSuffix}.png`;
+          a.click();
+        };
+      });
+    });
   </script>
 </body>
 </html>
