--- a/index.html
+++ b/index.html
@@ -29,59 +29,66 @@
 
     const urlParams = new URLSearchParams(window.location.search);
     const sessionId = urlParams.get('session_id');
-    const machineId = urlParams.get('client_reference_id') || '0243';
-    const amountStr = urlParams.get('amount') || '1.39';
+    const amountStr = urlParams.get('amount');
     const amount = parseFloat(amountStr);
-    const playsMap = { 1.39: 1, 3.39: 3, 5.39: 5, 10.39: 10 };
-    const plays = playsMap[amount] || 1;
 
-    let randomIdPromise;
-    if (sessionId) {
-      randomIdPromise = generateHMAC(sessionId).then(h => h.substring(0, 4).toUpperCase());
+    const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
+    const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
+    const plays = playsMap[amountStr] || 0;
+    const machineId = '0243';
+
+    // Strict validation: must have valid session_id AND exact valid amount string
+    const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
+    const isValidAmount = validAmounts.includes(amountStr);
+
+    if (!isValidSession || !isValidAmount) {
+      document.getElementById("qrContainer").innerHTML = '';
+      document.getElementById('code').textContent = '';
+      document.getElementById('downloadBtn').style.display = 'none';
     } else {
-      randomIdPromise = Promise.resolve(Math.random().toString(36).substring(2, 6).toUpperCase());
-    }
+      generateHMAC(sessionId).then(sessionHash => {
+        const randomId = sessionHash.substring(0, 4).toUpperCase();
 
-    randomIdPromise.then(randomId => {
-      const dataToSign = `${plays}|${machineId}${randomId}`;
+        const dataToSign = `${plays}|${machineId}${randomId}`;
 
-      generateHMAC(dataToSign).then(hash => {
-        const shortSig = hash.substring(0, 4).toUpperCase();
-        const code = plays === 10 ? `10-${machineId}${randomId}${shortSig}` : `${plays}-${machineId}${randomId}${shortSig}`;
+        generateHMAC(dataToSign).then(hash => {
+          const shortSig = hash.substring(0, 4).toUpperCase();
+          const code = plays === 10 ? `10-${machineId}${randomId}${shortSig}` : `${plays}-${machineId}${randomId}${shortSig}`;
 
-        document.getElementById('code').textContent = code;
-        document.getElementById("qrContainer").innerHTML = "";
-        new QRCode(document.getElementById("qrContainer"), {
-          text: code,
-          width: 200,
-          height: 200,
-          colorDark: "#000000",
-          colorLight: "#FFFFFF",
-          correctLevel: QRCode.CorrectLevel.H
+          document.getElementById('code').textContent = code;
+          document.getElementById("qrContainer").innerHTML = "";
+          new QRCode(document.getElementById("qrContainer"), {
+            text: code,
+            width: 200,
+            height: 200,
+            colorDark: "#000000",
+            colorLight: "#FFFFFF",
+            correctLevel: QRCode.CorrectLevel.H
+          });
+
+          document.getElementById('downloadBtn').onclick = () => {
+            const canvas = document.createElement('canvas');
+            canvas.width = 440;
+            canvas.height = 520;
+            const ctx = canvas.getContext('2d');
+            ctx.fillStyle = 'white';
+            ctx.fillRect(0, 0, canvas.width, canvas.height);
+            const qrCanvas = document.querySelector('#qrContainer canvas');
+            ctx.drawImage(qrCanvas, 40, 40, 360, 360);
+            ctx.fillStyle = 'black';
+            ctx.font = 'bold 30px Arial';
+            ctx.textAlign = 'center';
+            ctx.fillText(code, canvas.width / 2, 460);
+            const url = canvas.toDataURL('image/png');
+            const randomSuffix = Math.random().toString(36).substring(2, 6).toUpperCase();
+            const a = document.createElement('a');
+            a.href = url;
+            a.download = `Trac-QR-${machineId}-${plays}plays-${randomSuffix}.png`;
+            a.click();
+          };
         });
-
-        document.getElementById('downloadBtn').onclick = () => {
-          const canvas = document.createElement('canvas');
-          canvas.width = 440;
-          canvas.height = 520;
-          const ctx = canvas.getContext('2d');
-          ctx.fillStyle = 'white';
-          ctx.fillRect(0, 0, canvas.width, canvas.height);
-          const qrCanvas = document.querySelector('#qrContainer canvas');
-          ctx.drawImage(qrCanvas, 40, 40, 360, 360);
-          ctx.fillStyle = 'black';
-          ctx.font = 'bold 30px Arial';
-          ctx.textAlign = 'center';
-          ctx.fillText(code, canvas.width / 2, 460);
-          const url = canvas.toDataURL('image/png');
-          const randomSuffix = Math.random().toString(36).substring(2, 6).toUpperCase();
-          const a = document.createElement('a');
-          a.href = url;
-          a.download = `Trac-QR-${machineId}-${plays}plays-${randomSuffix}.png`;
-          a.click();
-        };
       });
-    });
+    }
   </script>
 </body>
 </html>
