--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
     const validAmounts = new Set(['1.39', '3.39', '5.39', '10.39']);
     const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
-    const plays = playsMap[amountStr] || 0;
+    const plays = playsMap[amountStr];
     const machineId = '0243';
 
     const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
     const isValidAmount = validAmounts.has(amountStr);
 
-    if (!isValidSession || !isValidAmount) {
+    if (!isValidSession || !isValidAmount || plays === undefined) {
       document.getElementById("qrContainer").innerHTML = '';
       document.getElementById('code').textContent = '';
       document.getElementById('downloadBtn').style.display = 'none';
