--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
+Here is website -
+
+..... tracreader.github.io/trac-qr-success/
+
+Here is good working code (minus being able to change amount between 1.39, 3.39, 5.39, and 10.39) to get another code without paying. other than this... for now.... everything seems to be good so people can't tamper with it!
+
+index.html - 
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -30,14 +38,16 @@
     const urlParams = new URLSearchParams(window.location.search);
     const sessionId = urlParams.get('session_id');
     const amountStr = urlParams.get('amount');
+    const amount = parseFloat(amountStr);
 
-    const validAmounts = new Set(['1.39', '3.39', '5.39', '10.39']);
+    const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
     const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
-    const plays = playsMap[amountStr];
+    const plays = playsMap[amountStr] || 0;
     const machineId = '0243';
 
+    // Strict validation: must have valid session_id AND exact valid amount string
     const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
-    const isValidAmount = amountStr && validAmounts.has(amountStr);
+    const isValidAmount = validAmounts.includes(amountStr);
 
     if (!isValidSession || !isValidAmount) {
       document.getElementById("qrContainer").innerHTML = '';
