--- a/index.html
+++ b/index.html
@@ -31,14 +31,13 @@
     const sessionId = urlParams.get('session_id');
     const amountStr = urlParams.get('amount');
 
-    const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
+    const validAmounts = new Set(['1.39', '3.39', '5.39', '10.39']);
     const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
     const plays = playsMap[amountStr];
     const machineId = '0243';
 
-    // Strict validation: exact amount string AND valid session prefix
     const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
-    const isValidAmount = amountStr && validAmounts.includes(amountStr);
+    const isValidAmount = amountStr && validAmounts.has(amountStr);
 
     if (!isValidSession || !isValidAmount || plays === undefined) {
       document.getElementById("qrContainer").innerHTML = '';
