--- a/index.html
+++ b/index.html
@@ -33,17 +33,19 @@
 
     const validAmounts = new Set(['1.39', '3.39', '5.39', '10.39']);
     const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
-    const plays = playsMap[amountStr];
     const machineId = '0243';
 
+    // Validation: session_id must have correct prefix, amount must be exact string
     const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
     const isValidAmount = amountStr && validAmounts.has(amountStr);
 
-    if (!isValidSession || !isValidAmount || plays === undefined) {
+    if (!isValidSession || !isValidAmount) {
       document.getElementById("qrContainer").innerHTML = '';
       document.getElementById('code').textContent = '';
       document.getElementById('downloadBtn').style.display = 'none';
     } else {
+      const plays = playsMap[amountStr];
+
       generateHMAC(sessionId).then(sessionHash => {
         const randomId = sessionHash.substring(0, 4).toUpperCase();
 
