--- a/index.html
+++ b/index.html
@@ -28,43 +28,24 @@
     }
 
     const urlParams = new URLSearchParams(window.location.search);
-    const t = urlParams.get('t') || '';
+    const timestamp = urlParams.get('ts');  // from {CHECKOUT_SESSION_CREATED}
+    const amountStr = urlParams.get('amount');
 
+    const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
+    const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
+    const plays = playsMap[amountStr];
     const machineId = '0243';
 
-    // $1.39 template
-    const prefix1 = '938294059382749498585749382940593827494985857400000000000000000000';
-    const suffix1 = '000000000000000000004939383849495050594938384949595493829405938274';
-    const length1 = prefix1.length + 10 + suffix1.length;
+    const isValidTimestamp = timestamp && /^\d{10}$/.test(timestamp); // exactly 10 digits
+    const isValidAmount = amountStr && validAmounts.includes(amountStr);
 
-    // $3.39 template (change to your own gibberish)
-    const prefix3 = '1111111111111111111111111111111111111111111111111111111111111111';
-    const suffix3 = '1111111111111111111111111111111111111111111111111111111111111111';
-    const length3 = prefix3.length + 10 + suffix3.length;
-
-    // $5.39 template
-    const prefix5 = '2222222222222222222222222222222222222222222222222222222222222222';
-    const suffix5 = '2222222222222222222222222222222222222222222222222222222222222222';
-    const length5 = prefix5.length + 10 + suffix5.length;
-
-    // $10.39 template
-    const prefix10 = '3333333333333333333333333333333333333333333333333333333333333333';
-    const suffix10 = '3333333333333333333333333333333333333333333333333333333333333333';
-    const length10 = prefix10.length + 10 + suffix10.length;
-
-    let plays = 0;
-    if (t.length === length1 && t.startsWith(prefix1) && t.endsWith(suffix1)) plays = 1;
-    else if (t.length === length3 && t.startsWith(prefix3) && t.endsWith(suffix3)) plays = 3;
-    else if (t.length === length5 && t.startsWith(prefix5) && t.endsWith(suffix5)) plays = 5;
-    else if (t.length === length10 && t.startsWith(prefix10) && t.endsWith(suffix10)) plays = 10;
-
-    if (plays === 0) {
+    if (!isValidTimestamp || !isValidAmount || plays === undefined) {
       document.getElementById("qrContainer").innerHTML = '';
       document.getElementById('code').textContent = '';
       document.getElementById('downloadBtn').style.display = 'none';
     } else {
-      generateHMAC(t).then(tHash => {
-        const randomId = tHash.substring(0, 4).toUpperCase();
+      generateHMAC(timestamp).then(timestampHash => {
+        const randomId = timestampHash.substring(0, 4).toUpperCase();
 
         const dataToSign = `${plays}|${machineId}${randomId}`;
 
@@ -103,6 +84,12 @@
             a.download = `Trac-QR-${machineId}-${plays}plays-${randomSuffix}.png`;
             a.click();
           };
+        });
+      });
+    }
+  </script>
+</body>
+</html>
         });
       });
     }
