--- a/index.html
+++ b/index.html
@@ -28,24 +28,26 @@
     }
 
     const urlParams = new URLSearchParams(window.location.search);
-    const timestamp = urlParams.get('ts');  // from {CHECKOUT_SESSION_CREATED}
+    const sessionId = urlParams.get('session_id');
     const amountStr = urlParams.get('amount');
+    const amount = parseFloat(amountStr);
 
     const validAmounts = ['1.39', '3.39', '5.39', '10.39'];
     const playsMap = { '1.39': 1, '3.39': 3, '5.39': 5, '10.39': 10 };
-    const plays = playsMap[amountStr];
+    const plays = playsMap[amountStr] || 0;
     const machineId = '0243';
 
-    const isValidTimestamp = timestamp && /^\d{10}$/.test(timestamp); // exactly 10 digits
-    const isValidAmount = amountStr && validAmounts.includes(amountStr);
+    // Strict validation: must have valid session_id AND exact valid amount string
+    const isValidSession = sessionId && (sessionId.startsWith('cs_test_') || sessionId.startsWith('cs_live_'));
+    const isValidAmount = validAmounts.includes(amountStr);
 
-    if (!isValidTimestamp || !isValidAmount || plays === undefined) {
+    if (!isValidSession || !isValidAmount) {
       document.getElementById("qrContainer").innerHTML = '';
       document.getElementById('code').textContent = '';
       document.getElementById('downloadBtn').style.display = 'none';
     } else {
-      generateHMAC(timestamp).then(timestampHash => {
-        const randomId = timestampHash.substring(0, 4).toUpperCase();
+      generateHMAC(sessionId).then(sessionHash => {
+        const randomId = sessionHash.substring(0, 4).toUpperCase();
 
         const dataToSign = `${plays}|${machineId}${randomId}`;
 
@@ -84,12 +86,6 @@
             a.download = `Trac-QR-${machineId}-${plays}plays-${randomSuffix}.png`;
             a.click();
           };
-        });
-      });
-    }
-  </script>
-</body>
-</html>
         });
       });
     }
